# khimaira

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  HANDOFF-TO-KHIMAIRA.md  LICENSE  NORTH_STAR.md  README.md  ROSTER-LAUNCH-INCIDENT-2026-06-06.md  ROSTER_ISSUES_2026-06-05.md  SECURITY.md  pyproject.toml
.claude/agents/: khimaira-internal-agent.md  khimaira-internal-consultant.md  khimaira-internal-gatekeeper.md
.claude/skills/consult/: SKILL.md
.claude/skills/intern/: SKILL.md
.claude/workflows/: internal-roster.js
.github/workflows/: bootstrap.yml  test.yml  wheel.yml
apps/monitor-ui/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
apps/monitor-ui/src/: App.tsx  api.ts  main.tsx  store.ts
apps/monitor-ui/src/components/kg/: CopyJsonButton.tsx  KgEdgeInspector.tsx  KgMapper.tsx  KgNodeInspector.tsx  graphStyle.ts  kgTypes.ts
apps/monitor-ui/src/components/notebook/: ChatPanel.tsx  CopyRawMarkdownButton.tsx  FileManagerSidebar.tsx  GuideChatPanel.tsx  IdChip.tsx  LibraryView.tsx  MarkdownView.tsx  MermaidBlock.tsx  Notebook.tsx  PrioritySelector.tsx  ResearchPanel.tsx  SensitiveBadge.tsx  TestStatusSelector.tsx  TicketsView.tsx  notebookTypes.ts
apps/monitor-ui/src/components/observer/: CostDashboard.tsx  TraceWaterfall.tsx
apps/monitor-ui/src/components/project/: ActiveNodeCard.tsx  FlowCanvas.tsx  LiveRunsCard.tsx  NodeInspector.tsx  ProjectNavTabs.tsx  ProjectView.tsx  ReplayController.tsx  RunStepsCard.tsx  RunsDrawer.tsx  RunsSidebar.tsx  StalenessBadge.tsx
apps/monitor-ui/src/components/projects/: ProjectIndex.tsx
apps/monitor-ui/src/components/shell/: MonitorShell.tsx
apps/monitor-ui/src/components/threads/: JsonTree.tsx
apps/monitor-ui/src/components/ui/: badge.tsx  button.tsx
apps/monitor-ui/src/lib/: staleness.ts  theme.ts  useRunCheckpoints.ts
apps/monitor-ui/src/styles/: globals.css
docs/: ARCHITECTURE.md  INBOX-AND-HANDOFFS.md  INSTALL.md  KG-SYSTEM-TRACKER.md  PROTOCOL.md  khimaira-chat.md  khimaira-roster-topology-rfc.md  master-playbook.md
docs/domain/: README.md  backend-knowledge.md  data-knowledge.md  frontend-knowledge.md
scratchpad/: CONSULTANT-SONNET5-EVAL.md  DIRECTED-WAKE-AUDIT.md  GATEKEEPER-GATE-DESIGN-NOTE.md  ISSUE38-LIVE-TOLLGATE-README.md  ISSUE38-LIVE-TOLLGATE.patch  ISSUE39-COMMITTABLE-DERIVED-SPEC.md  KG-EXTENSION-CONTRACT-v1.md  KG-JEEVY-ISSUES-2026-06-29.md  KG-VISUALIZER-JEEVY-MIGRATION-SCOPING.md  LEAN-ROSTER-SPEC.md  MASTER-HANDOFF.md
scripts/: publish-pending.sh
scripts/hooks/: post_tool_use.py  post_tool_use.sh  session_start.py  session_start.sh  themis_pretool.py  user_prompt_submit.py  user_prompt_submit.sh
scripts/watchers/: README.md  khimaira-bottleneck-watch.service  khimaira-bottleneck-watch.sh  khimaira-bottleneck-watch.timer
shared-docs/: ESCAPED-BUGS-LOG.md
shared-docs/joseph/: STATE.md
shared/transport/: README.md  pyproject.toml
shared/transport/src/khimaira_transport/: __init__.py
shared/types/: README.md  pyproject.toml
shared/types/src/chimera_types/: __init__.py  usage.py
shared/types/src/khimaira_types/: __init__.py  classification.py  context.py  routing.py  runtime.py  usage.py
tasks/: BETA-BACKLOG.md  BUILD-PLAN.md  HANDOFF-2026-06-05.md
tasks/account-failover-proxy/: SPEC.md
tasks/auto-begin-binding/: SPEC.md
tasks/auto-begin-dispatch/: IMPLEMENTATION.md
tasks/bootstrap-profile/: EXAMPLE-PROFILE.yaml
tasks/create-room-resolve-member-roles-keys/: SPEC.md
tasks/cross-machine-backend/: IMPLEMENTATION.md
tasks/daemon-sluggishness-review/: IMPLEMENTATION.md
tasks/desktop-notifications/: IMPLEMENTATION.md
tasks/domain-specialist/: IMPLEMENTATION.md
tasks/gemini-runner-bug/: IMPLEMENTATION.md
tasks/grimoire/: CHAT-MODEL.md  CHAT-UNIFY.md  FILE-MANAGER.md  IMPLEMENTATION.md  PERSONAL-CONTEXT-SCOPING.md  SENSITIVE-AND-FLAGS.md
tasks/guard7-task-delivery-watchdog/: SPEC.md
tasks/idle-wake-watchdog/: CHARACTERIZATION.md
tasks/issue-18-auto-dispatch-freeze/: CHARACTERIZATION.md
tasks/issue-18-auto-dispatch-freeze/harness/: launch_empty.py  launch_real.py  orchestrate_sse.py
tasks/jeevy-ground-truth-corpus/: SPEC.md
tasks/jeevy-kg-scanner/: SPEC.md
tasks/k3b-bootstrap-overlap-guard/: IMPLEMENTATION.md
tasks/kg-graph-mapper/: SPEC.md
tasks/khimaira-chat/: IMPLEMENTATION.md  PHASE-B-V2-ROLES-AUDIT.md  PHASE-B-VISION.md  RESEARCH-daemon-push.md
tasks/khimaira-sync-pip-mode/: IMPLEMENTATION.md
tasks/launch/: PLAN.md
tasks/linear-adapter/: IMPLEMENTATION.md
tasks/memory-kg/: IMPLEMENTATION.md
tasks/mnemosyne-lead-as-editor-harvest/: IMPLEMENTATION.md
tasks/mnemosyne-retrieval-v2/: IMPLEMENTATION.md
tasks/monitor-bound-id-split/: HANDOFF.md
tasks/naming-resolution/: DESIGN.md
tasks/notebook/: IMPLEMENTATION.md
tasks/nudge-liveness-false-negative-gap/: IMPLEMENTATION.md
tasks/oracle-drift-check/: SPEC.md
tasks/oracle-groundtruth-generator/: SPEC.md
tasks/oracle-realtime-rag/: SPEC.md
tasks/persistent-scheduler/: IMPLEMENTATION.md
tasks/react-devtools/: IMPLEMENTATION.md
tasks/roster-restart-identity-gap/: IMPLEMENTATION.md
tasks/sse-deaf-idle-wake/: SPEC.md
tasks/sse-stale-session-handle-root/: IMPLEMENTATION.md
tasks/subagent-usage-hook/: IMPLEMENTATION.md
tasks/task-4-v2-chunk-distill/: SPEC.md
tasks/task-claim-atomicity-gap/: IMPLEMENTATION.md
tasks/task-sources/: IMPLEMENTATION.md
tasks/themis/: IMPLEMENTATION.md
tasks/v1.9-assign-batch/: IMPLEMENTATION.md
tasks/v1.9-orchestration/: STATE.md  USAGE.md
tasks/wake-by-session-id/: SPEC.md
tasks/wip-guard-commit-stall/: SPEC.md
tasks/workspaces/: IMPLEMENTATION.md
