[project]
name = "chimera-workspace"
version = "0.0.0"
description = "chimera — AI dev framework (workspace root)"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*", "shared/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "shared/*/tests"]
