[project]
name = "khimaira-workspace"
version = "0.0.0"
description = "khimaira — AI dev framework (workspace root)"
requires-python = ">=3.12"
# Listing workspace members as dependencies is load-bearing: it makes
# `uv sync` (from the workspace root) install every member's entry-point
# script into .venv/bin/. Without this, a plain `uv sync` only resolves
# the root project's deps and drops member bins — most painfully,
# `.venv/bin/khimaira` disappears, breaking the khimaira MCP launcher and
# the bootstrap script's PATH-resolution layer. Use `tool.uv.sources`
# below to redirect each name to the workspace member rather than PyPI.
dependencies = [
    "khimaira",
    "khimaira-scarlet",
    "khimaira-seance",
    "khimaira-sibyl",
    "khimaira-specter",
    "khimaira-transport",
    "khimaira-types",
]

[tool.uv.workspace]
members = ["packages/*", "shared/*"]

[tool.uv.sources]
# v0.2.0 prefix-rename — siblings now publish to PyPI as
# `khimaira-{seance,specter,scarlet,sibyl}`. Local module paths still
# resolve via `from seance import ...` etc. (package directories
# unchanged); only the PyPI distribution names changed.
khimaira = { workspace = true }
khimaira-scarlet = { workspace = true }
khimaira-seance = { workspace = true }
khimaira-sibyl = { workspace = true }
khimaira-specter = { workspace = true }
khimaira-transport = { workspace = true }
khimaira-types = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "shared/*/tests"]
markers = [
    "integration: end-to-end tests that shell out to real CLI runners (claude/codex/gemini/ollama). Skipped when the required runner isn't installed. Excluded from default `pytest` runs; opt in via `pytest -m integration` or `pytest -m 'not integration'` for the inverse.",
]
# Default: only unit tests. CI runs the integration set separately when
# a runner image is available.
addopts = "-m 'not integration'"
