[project]
name = "chimera-transport"
version = "0.1.0.dev0"
description = "Shared MCP + SSE transport helpers across chimera packages"
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.0", "sse-starlette>=2.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chimera_transport"]
