[project]
name = "khimaira-transport"
version = "0.1.0"
description = "Shared MCP + SSE transport helpers for khimaira (FastMCP bootstrap, SSE stream wrappers)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "fsocietydisobey" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
keywords = ["khimaira", "mcp", "sse", "transport"]
dependencies = ["fastmcp>=2.0", "sse-starlette>=2.1"]

[project.urls]
Homepage = "https://github.com/fsocietydisobey/khimaira"
Repository = "https://github.com/fsocietydisobey/khimaira"
Issues = "https://github.com/fsocietydisobey/khimaira/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/khimaira_transport"]
