[project]
name = "khimaira-types"
version = "0.1.0.dev0"
description = "Shared schemas across khimaira packages — TaskClassification, FileContext, UsageRecord, RoutingDecision"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/khimaira_types"]
