[project]
name = "khimaira-types"
version = "0.1.0"
description = "Shared Pydantic schemas for khimaira — TaskClassification, FileContext, UsageRecord, RoutingDecision"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "fsocietydisobey" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
keywords = ["khimaira", "schemas", "ai-orchestration"]
dependencies = ["pydantic>=2.7"]

[project.urls]
Homepage = "https://github.com/fsocietydisobey/khimaira"
Repository = "https://github.com/fsocietydisobey/khimaira"
Issues = "https://github.com/fsocietydisobey/khimaira/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/khimaira_types"]
